// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox controlled input behaviour for input should allow updating of the checked state 1`] = `
<div>
  <div
    class="googlesitekit-component-gm3_checkbox"
  >
    <md-checkbox
      data-aria-label="Checkbox Label"
      id="checkbox-id"
      name="checkbox-name"
      role="checkbox"
      value="checkbox-value"
    />
    <label
      for="checkbox-id"
    >
      Checkbox Label
    </label>
  </div>
</div>
`;

exports[`Checkbox controlled input behaviour for input should allow updating of the checked state 2`] = `
<div>
  <div
    class="googlesitekit-component-gm3_checkbox"
  >
    <md-checkbox
      checked=""
      data-aria-label="Checkbox Label"
      id="checkbox-id"
      name="checkbox-name"
      role="checkbox"
      value="checkbox-value"
    />
    <label
      for="checkbox-id"
    >
      Checkbox Label
    </label>
  </div>
</div>
`;

exports[`Checkbox controlled input behaviour for input should allow updating of the checked state 3`] = `
<div>
  <div
    class="googlesitekit-component-gm3_checkbox"
  >
    <md-checkbox
      data-aria-label="Checkbox Label"
      id="checkbox-id"
      name="checkbox-name"
      role="checkbox"
      value="checkbox-value"
    />
    <label
      for="checkbox-id"
    >
      Checkbox Label
    </label>
  </div>
</div>
`;

exports[`Checkbox controlled input behaviour for input should correctly invoke onChange and retain its checked state when clicked 1`] = `
<div>
  <div
    class="googlesitekit-component-gm3_checkbox"
  >
    <md-checkbox
      checked=""
      data-aria-label="Checkbox Label"
      id="checkbox-id"
      name="checkbox-name"
      role="checkbox"
      value="checkbox-value"
    />
    <label
      for="checkbox-id"
    >
      Checkbox Label
    </label>
  </div>
</div>
`;

exports[`Checkbox controlled input behaviour for input should correctly invoke onChange and retain its checked state when clicked 2`] = `
<div>
  <div
    class="googlesitekit-component-gm3_checkbox"
  >
    <md-checkbox
      checked=""
      data-aria-label="Checkbox Label"
      id="checkbox-id"
      name="checkbox-name"
      role="checkbox"
      value="checkbox-value"
    />
    <label
      for="checkbox-id"
    >
      Checkbox Label
    </label>
  </div>
</div>
`;

exports[`Checkbox controlled input behaviour for input should correctly invoke onChange and retain its unchecked state when clicked 1`] = `
<div>
  <div
    class="googlesitekit-component-gm3_checkbox"
  >
    <md-checkbox
      data-aria-label="Checkbox Label"
      id="checkbox-id"
      name="checkbox-name"
      role="checkbox"
      value="checkbox-value"
    />
    <label
      for="checkbox-id"
    >
      Checkbox Label
    </label>
  </div>
</div>
`;

exports[`Checkbox controlled input behaviour for input should correctly invoke onChange and retain its unchecked state when clicked 2`] = `
<div>
  <div
    class="googlesitekit-component-gm3_checkbox"
  >
    <md-checkbox
      data-aria-label="Checkbox Label"
      id="checkbox-id"
      name="checkbox-name"
      role="checkbox"
      value="checkbox-value"
    />
    <label
      for="checkbox-id"
    >
      Checkbox Label
    </label>
  </div>
</div>
`;

exports[`Checkbox controlled input behaviour for label should allow updating of the checked state 1`] = `
<div>
  <div
    class="googlesitekit-component-gm3_checkbox"
  >
    <md-checkbox
      data-aria-label="Checkbox Label"
      id="checkbox-id"
      name="checkbox-name"
      role="checkbox"
      value="checkbox-value"
    />
    <label
      for="checkbox-id"
    >
      Checkbox Label
    </label>
  </div>
</div>
`;

exports[`Checkbox controlled input behaviour for label should allow updating of the checked state 2`] = `
<div>
  <div
    class="googlesitekit-component-gm3_checkbox"
  >
    <md-checkbox
      checked=""
      data-aria-label="Checkbox Label"
      id="checkbox-id"
      name="checkbox-name"
      role="checkbox"
      value="checkbox-value"
    />
    <label
      for="checkbox-id"
    >
      Checkbox Label
    </label>
  </div>
</div>
`;

exports[`Checkbox controlled input behaviour for label should allow updating of the checked state 3`] = `
<div>
  <div
    class="googlesitekit-component-gm3_checkbox"
  >
    <md-checkbox
      data-aria-label="Checkbox Label"
      id="checkbox-id"
      name="checkbox-name"
      role="checkbox"
      value="checkbox-value"
    />
    <label
      for="checkbox-id"
    >
      Checkbox Label
    </label>
  </div>
</div>
`;

exports[`Checkbox controlled input behaviour for label should correctly invoke onChange and retain its checked state when clicked 1`] = `
<div>
  <div
    class="googlesitekit-component-gm3_checkbox"
  >
    <md-checkbox
      checked=""
      data-aria-label="Checkbox Label"
      id="checkbox-id"
      name="checkbox-name"
      role="checkbox"
      value="checkbox-value"
    />
    <label
      for="checkbox-id"
    >
      Checkbox Label
    </label>
  </div>
</div>
`;

exports[`Checkbox controlled input behaviour for label should correctly invoke onChange and retain its checked state when clicked 2`] = `
<div>
  <div
    class="googlesitekit-component-gm3_checkbox"
  >
    <md-checkbox
      checked=""
      data-aria-label="Checkbox Label"
      id="checkbox-id"
      name="checkbox-name"
      role="checkbox"
      value="checkbox-value"
    />
    <label
      for="checkbox-id"
    >
      Checkbox Label
    </label>
  </div>
</div>
`;

exports[`Checkbox controlled input behaviour for label should correctly invoke onChange and retain its unchecked state when clicked 1`] = `
<div>
  <div
    class="googlesitekit-component-gm3_checkbox"
  >
    <md-checkbox
      data-aria-label="Checkbox Label"
      id="checkbox-id"
      name="checkbox-name"
      role="checkbox"
      value="checkbox-value"
    />
    <label
      for="checkbox-id"
    >
      Checkbox Label
    </label>
  </div>
</div>
`;

exports[`Checkbox controlled input behaviour for label should correctly invoke onChange and retain its unchecked state when clicked 2`] = `
<div>
  <div
    class="googlesitekit-component-gm3_checkbox"
  >
    <md-checkbox
      data-aria-label="Checkbox Label"
      id="checkbox-id"
      name="checkbox-name"
      role="checkbox"
      value="checkbox-value"
    />
    <label
      for="checkbox-id"
    >
      Checkbox Label
    </label>
  </div>
</div>
`;

exports[`Checkbox should render the checkbox 1`] = `
<div>
  <div
    class="googlesitekit-component-gm3_checkbox"
  >
    <md-checkbox
      data-aria-label="Checkbox Label"
      id="checkbox-id"
      name="checkbox-name"
      role="checkbox"
      value="checkbox-value"
    />
    <label
      for="checkbox-id"
    >
      Checkbox Label
    </label>
  </div>
</div>
`;

exports[`Checkbox should render the checkbox with a complex label 1`] = `
<div>
  <div
    class="googlesitekit-component-gm3_checkbox"
  >
    <md-checkbox
      data-aria-label="Complex Label With 5 Sub Children"
      id="checkbox-id"
      name="checkbox-name"
      role="checkbox"
      value="checkbox-value"
    />
    <label
      for="checkbox-id"
    >
      <div>
        Complex Label
        <span>
          <a
            href="https://example.com"
          >
             With
          </a>
          <span>
            5
          </span>
        </span>
        <span>
          Sub
          <span>
             Children 
          </span>
        </span>
      </div>
    </label>
  </div>
</div>
`;

exports[`Checkbox should render the checkbox with checked state 1`] = `
<div>
  <div
    class="googlesitekit-component-gm3_checkbox"
  >
    <md-checkbox
      checked="true"
      data-aria-label="Checkbox Label"
      id="checkbox-id"
      name="checkbox-name"
      role="checkbox"
      value="checkbox-value"
    />
    <label
      for="checkbox-id"
    >
      Checkbox Label
    </label>
  </div>
</div>
`;

exports[`Checkbox should render the checkbox with disabled state 1`] = `
<div>
  <div
    class="googlesitekit-component-gm3_checkbox"
  >
    <md-checkbox
      data-aria-label="Checkbox Label"
      disabled="true"
      id="checkbox-id"
      name="checkbox-name"
      role="checkbox"
      value="checkbox-value"
    />
    <label
      for="checkbox-id"
    >
      Checkbox Label
    </label>
  </div>
</div>
`;

exports[`Checkbox should render the checkbox with loading state 1`] = `
<div>
  <div
    class="googlesitekit-component-gm3_checkbox"
  >
    <div
      class="googlesitekit-component-gm3_checkbox--loading"
    >
      <span
        class="spinner"
        style="display: inline-block; float: none; margin-top: 0px; visibility: visible;"
      />
    </div>
    <label
      for="checkbox-id"
    >
      Checkbox Label
    </label>
  </div>
</div>
`;
